syntax = "proto3";
package messages;

message RequestWrapper {
	string requestType = 1;
	bytes payload = 2;
}
