syntax = "proto3";
package messages;

message UsernamePasswordRequestPayload {
	string username = 1;
	string password = 2;
	string domain   = 3;
}
